# vacuum-instrument-monitor

./: .gitignore  README.md  main.py  pyproject.toml  pyrefly.toml  serial_terminal.py  virtual_gp350.py  virtual_vgc402.py
.github/workflows/: build-linux-binary.yml  deploy-pi.yml
collectors/: __init__.py  config.py  csv_writer.py  device_discovery.py  gp350_collector.py  influx_writer.py  measurements.py  serial_client.py  vgc402.py
config/: config.ini
config/examples/: collector.env.example  gp350-1.ini  gp350-2.ini  vgc402.ini
devices/: __init__.py  base.py  gp350.py  registry.py  vgc402.py
docs/: acceptance_tests.md  autodetekcja_urzadzen.md  dzialanie.md  influxdb_grafana.md  kolektor_danych.md  linux_systemd_runner.md  podlaczenie_gp350.md  scenariusze_konfiguracji.md  warstwa_urzadzen.md
grafana/: alert-rules.md  vacuum-dashboard.json
logrotate/: vacuum-monitor
scripts/: acceptance_vgc402.sh  build_linux_binary.sh  check_linux_binary.sh  deploy_on_pi.sh  install_github_runner_on_pi.sh  install_linux_binary_service.sh  install_linux_service.sh  install_udev_rules.sh  run_collector_binary_linux.sh  run_collector_linux.sh
simulators/: __init__.py  enums.py  formatting.py  gp350_generator.py  parser.py  physics.py  simulator.py  vgc402_simulator.py
systemd/: vacuum-monitor-collector-binary@.service  vacuum-monitor-collector@.service
tests/: test_collectors.py  test_device_discovery.py  test_formatting.py  test_influx_writer.py  test_integration.py  test_parser.py  test_simulator.py
udev/: 99-vacuum-monitor.rules.example
